added the pages and encrypted the password

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="https://lh3.googleusercontent.com/-FLM_fzYQhW4/AAAAAAAAAAI/AAAAAAAAAAA/3LAK4phydQI/s36-c-k/photo.jpg" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -18,7 +18,7 @@
       It will be replaced with the URL of the `public` folder during the build.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Seed Chain</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
